# srt_file_translator

./: .gitignore  Dockerfile  README.md  W1L1_V01-enzh-CN.srt  helpers.py  prettify.sh  pyproject.toml  requirements.txt  run.py  run_documentation.sh  run_prettify.sh  run_publish_version.sh  run_test.sh  see_languages.py  setup.cfg  translate.py  translator.py  translator_options.py  translators.py  update_documentation.sh
code/: helpers.py  translate.py  translators.py
docs/: search.js  srt_file_translator.html
docs/1.0.1/: index.html  search.js  srt_file_translator.html
docs/1.0.1/srt_file_translator/: translator.html
example_data/: welcome_example-en.srt  welcome_example-es.srt
inputs/: W1L1_V01-en.srt
outputs/: W1L1_V01-en-de.srt  W1L1_V01-en-zh-CN.srt
srt_file_translator/: __init__.py  translator.py
srt_translator/: __init__.py
test/: test_01.py  test_02.py  test_03.py
